Bug 112123 - FILEOPEN: Crash with Application Error when opening particular file with style:data-style-name
Summary: FILEOPEN: Crash with Application Error when opening particular file with styl...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.3.7 target:5.4.2
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2017-08-31 06:21 UTC by Dinh Le
Modified: 2017-08-31 14:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["SvXMLStylesContext::FindStyleChildContext(unsigned short,rtl::OUString const &,bool)"]


Attachments
crashes with Application Error (1.63 KB, application/vnd.oasis.opendocument.text)
2017-08-31 06:22 UTC, Dinh Le
Details
gdb backtrace (43.57 KB, text/plain)
2017-08-31 12:08 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinh Le 2017-08-31 06:21:59 UTC
Description:
Opening the file leads to a crash with  Application Error Fatal Exception: Signal 6.

Tested it on 
version 5.3.5.2 and 
daily build 
master~2017-08-30_23.53.37_LibreOfficeDev_6.0.0.0.alpha0_Linux_x86-64_deb

Steps to Reproduce:
1. Open the file

Actual Results:  
crashes with Application Error

Expected Results:
not crashing, either opening or getting parsing error


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36
Comment 1 Dinh Le 2017-08-31 06:22:25 UTC
Created attachment 135894 [details]
crashes with Application Error
Comment 2 Xisco Faulí 2017-08-31 11:50:30 UTC
Confirmed in

Version: 6.0.0.0.alpha0+
Build ID: 78960ad06faca055a6d97afbc764c902d5d07f6f
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-08-30_06:31:19
Locale: es-ES (es_ES); Calc: group

and

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 3 Xisco Faulí 2017-08-31 12:08:57 UTC
Created attachment 135900 [details]
gdb backtrace
Comment 4 Commit Notification 2017-08-31 13:47:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b7d983684790331eacdf027c26d1cf61ae53468

Resolves: tdf#112123 check m_xAutoStyles like in similar methods

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2017-08-31 13:51:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3576aa7a7328b04faf222451d73681db7c1d9c54&h=libreoffice-5-3

Resolves: tdf#112123 check m_xAutoStyles like in similar methods

It will be available in 5.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2017-08-31 13:51:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e09c2106c136b9cb3a32e1ffbc19aba8269f37ca&h=libreoffice-5-4

Resolves: tdf#112123 check m_xAutoStyles like in similar methods

It will be available in 5.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.