Resolves: tdf#112123 check m_xAutoStyles like in similar methods

Change-Id: I099da789a0e64fd862d09bb462ccb699e1dc8b9f